test/zinc_source/compile_errors/concurrency/07_receive_from_channel_parameter.zn
// expected-error: cannot receive from channel parameter

fn helper(values) {
    value = <-values
    print("{value}")
}

fn main() {
    values = chan()
    helper(values)
}
